--- a/1.thread_basic/2.thread_model.md
+++ b/1.thread_basic/2.thread_model.md
@@ -2,6 +2,8 @@
 
 在第一章中，我们学习了 Thread 类，它是 C# 使用多线程能力的基础，在本章笔者将会从源码角度中解析 C# 的 Thread，而多线程编程属于并发编程，会涉及到很多中断、同步问题如锁、内存屏障等，而本章内容主要帮助读者了解操作系统和 .NET CLR 中的一些知识，便于理解更多细节以及为后面的章节阅读打下基础。
 
+本文内容可能比较乱，随便看看即可。
+
 
 
 ### 并发编程
