--- a/2.thread_sync/3.mutex.md
+++ b/2.thread_sync/3.mutex.md
@@ -1,28 +1,21 @@
-# 2.2 Mutex 锁
+# 2.3 Mutex 锁
 
 
 
 ### 导读
 
-Mutex 中文为互斥，Mutex 类叫做互斥锁。它还可用于进程间同步的同步基元。
-
-<p>
-    <blockquote style="margin: 10px 0px; padding: 10px; border-left: 4px solid rgb(221, 221, 221); color: rgb(68, 68, 68); background-color: rgb(249, 249, 249); border-radius: 4px; font-size: 14px; overflow-wrap: break-word; font-family: "Helvetica Neue", 微软雅黑, "Microsoft Yahei", Helvetica, Arial, sans-serif">
-Mutex 跟 lock 相似，但是 Mutex 支持多个进程。Mutex 大约比 lock 慢 20 倍。
-    </blockquote>
-</p>
+Mutex 中文为互斥，Mutex 类叫做互斥锁。它还可用于进程间同步的同步基元。Mutex 跟 lock 相似，但是 Mutex 支持多个进程，Mutex 大约比 lock 慢 20 倍。
 
 
+互斥锁(Mutex)，用于多线程中防止两条线程同时对一个公共资源进行读写的机制，Mutex 只能在获得锁的线程中释放锁。
 
-互斥锁(Mutex)，用于多线程中防止两条线程同时对一个公共资源进行读写的机制。
+
 
 Windows 操作系统中，Mutex 同步对象有两个状态：
 
 * signaled：未被任何对象拥有；
 
 * nonsignaled：被一个线程拥有；
-
-Mutex 只能在获得锁的线程中，释放锁。
 
 
 
@@ -105,7 +98,7 @@ Mutex 的常用方法如下：
 
 
 
-![](./.images/Mutex1.gif)
+![](./images/Mutex1.gif)
 
 
 
@@ -225,7 +218,7 @@ https://www.cnblogs.com/suntp/p/8258488.html
 
 
 
-![](./.images/Mutex2.gif)
+![](./images/Mutex2.gif)
 
 此时，我们使用了
 
@@ -362,7 +355,7 @@ namespace Parent
 
 然后启动 Parent.exe，可以观察到如下图的运行过程：
 
-![进程同步](./.images/进程同步.gif)
+![进程同步](./images/进程同步.gif)
 
 
 
