--- a/2.thread_sync/4.semaphore_semaphoreslim.md
+++ b/2.thread_sync/4.semaphore_semaphoreslim.md
@@ -1,8 +1,8 @@
-# 2.3 并发线程数限制
+# 2.4 非排他锁 Semaphore ：并发线程数限制
 
 ### 导读
 
-在本章中，将学 Semaphore 和 SemaphoreSlim，两者都可以限制同时访问某一资源或资源池的线程数，实现并发时限制具体数量的线程进行并发操作。
+在本章中，将学 Semaphore 和 SemaphoreSlim，两者都可以限制同时访问某一资源或资源池的线程数，实现并发时限制具体数量的线程进行并发操作。与 lock 不同的时，Semaphore 运行多个线程同时执行相同的区域代码，因此称为非排他锁。
 
 在本章中，我们从案例入手，通过示例代码，慢慢深入了解。
 
@@ -45,15 +45,15 @@ Semaphore 常用方法如下：
 
 我们来直接写代码，这里使用 《原子操作 Interlocked》 中的示例，现在我们要求，采用多个线程执行计算，但是只允许最多三个线程同时执行运行。
 
-使用 Semaphore ，有四个个步骤：
+使用 Semaphore ，有四个步骤：
 
-new 实例化 Semaphore，并设置最大线程数、初始化时可进入线程数；
+1. new 实例化 Semaphore，并设置最大线程数、初始化时可进入线程数；
 
-使用 `.WaitOne();` 获取进入权限(在获得进入权限前，线程处于阻塞状态)。
+2. 使用 `.WaitOne();` 获取进入权限(在获得进入权限前，线程处于阻塞状态)。
 
-离开时使用 `Release()` 释放占用。
+3. 离开时使用 `Release()` 释放占用。
 
-`Close()` 释放Semaphore 对象。
+4. `Close()` 释放Semaphore 对象。
 
 
 
@@ -125,9 +125,9 @@ new 实例化 Semaphore，并设置最大线程数、初始化时可进入线程
     }
 ```
 
+![Semaphoregif](images/Semaphoregif.gif)
 
 
-看着代码有点多，快去运行一下，看看结果。
 
 
 
@@ -171,7 +171,7 @@ maximumCount 表示最大允许几个线程进入资源池。
 
 ### 信号量
 
-前面我们学习到 Mutex，这个类是全局操作系统起作用的。我们从 Mutex 和 Semphore 中，也看到了 信号量这个东西。
+前面我们学习到 Mutex，这个类是全局操作系统起作用的。我们从 Mutex 和 Semphore 中，也看到了 信号量这个东西，用于进程同步。
 
 信号量分为两种类型：本地信号量和命名系统信号量。 
 
@@ -179,9 +179,7 @@ maximumCount 表示最大允许几个线程进入资源池。
 
 * 局部信号量仅存在于进程内。 
 
-当 name 为 null 或者为空时，Mutex 的信号量时局部信号量，否则 Mutex 的信号量是命名系统信号量。
-
-Semaphore 的话，也是两种情况都有。
+当 name 为 null 或者为空时，Mutex 的信号量时局部信号量，否则 Mutex 的信号量是命名系统信号量。Semaphore 的话，也是两种方式都有。
 
 如果使用接受名称的构造函数创建 Semaphor 对象，则该对象将与该名称的操作系统信号量关联。
 
@@ -196,6 +194,8 @@ Semaphore(Int32, Int32, String, Boolean)
 
 我们上面使用的示例就是局部信号量，进程中引用本地 Semaphore 对象的所有线程都可以使用。 每个 Semaphore 对象都是单独的本地信号量。
 
+可以利用 Semaphore 限制一个程序最多能够同时运行多少个。
+
 
 
 ## SemaphoreSlim类
@@ -204,7 +204,7 @@ SemaphoreSlim 跟 Semaphore 有啥关系？
 
 我看一下书再回答你。
 
-![file](./.images/image-1586681324216.png)
+![file](./images/image-1586681324216.png)
 
 
 
@@ -299,13 +299,13 @@ SemaphoreSlim 不需要 `Close()`。
 
 ## 区别
 
-如果使用下面的构造函数实例化 Semaphor(参数name不能为空)，那么创建的对象在整个操作系统内都有效。
+如果使用下面的构造函数实例化 Semaphor(参数name不能为空)，那么**创建的对象在整个操作系统内都有效**。
 
  ```csharp
 public Semaphore (int initialCount, int maximumCount, string name);
  ```
 
-Semaphorslim 则只在进程内内有效。
+Semaphorslim 则只在进程内有效，SemaphoreSlim 是对 Semaphore 的简单封装。
 
 
 
@@ -319,7 +319,10 @@ SemaphoreSlim 类不会对 `Wait`、`WaitAsync` 和 `Release` 方法的调用强
 </div>
 </p>
 
-这就好像笔筒里面的笔，没有监控，使用这使用完毕后，都应该将笔放进去。如果原先有10支笔，每次使用不放进去，或者将别的地方的笔放进去，那么最后数量就不是10了。
+
+这就好像笔筒里面的笔，没有监控，使用这使用完毕后，都应该将笔放进去。如果原先有10支笔，每次使用不放进去，或者将别的地方的笔放进去，那么最后数量就不是10了。因此使用时需要注意捕获异常，合理释放锁。
 
 
-![file](./.images/image-1587217831610.png)
+
+
+![file](./images/image-1587217831610.png)
