--- a/2.thread_sync/8.Barrier.md
+++ b/2.thread_sync/8.Barrier.md
@@ -1,4 +1,4 @@
-# 2.7 并行协调
+# 2.8 并行协调
 
 ### 导读
 
@@ -8,7 +8,7 @@
 
 线程工作情况如下：
 
-![file](./.images/image-1587773756667.png)
+![file](./images/image-1587773756667.png)
 
 我们接下来 将学习C# 中的 Barrier ，用于实现并行协同工作。
 
@@ -139,7 +139,7 @@ https://docs.microsoft.com/zh-cn/dotnet/standard/threading/how-to-synchronize-co
     }
 ```
 
-
+![并行协调](images/并行协调.gif)
 
 上面的示例中，每个线程都使用了 `DoWork()` 这个方法去中相同的事情，当然也可以设置多个线程执行不同的任务，但是必须保证每个线程都具有相同数量的 `.SignalAndWait();` 方法。
 
@@ -149,15 +149,15 @@ https://docs.microsoft.com/zh-cn/dotnet/standard/threading/how-to-synchronize-co
 
 
 
-### 新的示例
+### 线程淘汰
 
 `Barrier.AddParticipant()`：添加参与者；
 
 `Barrier.RemoveParticipant()`：移除参与者；
 
-这里继续使用第二节的示例。
 
-因为这是比赛，老是等待其他小组，会使得比赛进行比较慢。
+
+因为这是比赛，老是等待其他小组，会使得比赛进行比较慢。这里继续使用第二节的示例，当发现有些线程执行中出现特殊情况时，可以移除这些线程，让正常的线程继续执行下去。
 
 新的规则：不必等待最后一名，当环节只剩下最后一名时为完成时，其它小组可以立即进行下一个环节的比赛。
 
