--- a/2.thread_sync/9.ReaderWriterLock.md
+++ b/2.thread_sync/9.ReaderWriterLock.md
@@ -1,6 +1,6 @@
-# 2.8 读写锁
+# 2.9 读写锁
 
-本篇的内容主要是介绍 ReaderWriterLockSlim 类，来实现多线程下的读写分离。
+ReaderWriterLock、ReaderWriterLockSlim 都是 C# 中设置读写锁的手段，本篇的内容主要是介绍 ReaderWriterLockSlim 类，来实现多线程下的读写分离，由于两者很接近，因此本章就不讨论  ReaderWriterLock 了。
 
 
 
@@ -51,7 +51,6 @@ ReaderWriterLockSlim 的读、写入锁模板如下：
 		// 读
         private T Read()
         {
-
             try
             {
                 toolLock.EnterReadLock();           // 获取读取锁
@@ -75,14 +74,9 @@ ReaderWriterLockSlim 的读、写入锁模板如下：
                 try
                 {
                     toolLock.EnterWriteLock();
-                    /*
-                     * 
-                    */
+                    // 
                 }
-                catch
-                {
-
-                }
+                catch{}
                 finally
                 {
                     toolLock.ExitWriteLock();
@@ -96,7 +90,7 @@ ReaderWriterLockSlim 的读、写入锁模板如下：
         }
 ```
 
-
+使用 ReaderWriterLockSlim 时，需要注意释放读锁或写锁。
 
 
 
