--- a/3.task/2.task2.md
+++ b/3.task/2.task2.md
@@ -1,4 +1,4 @@
-# 4.2 任务基础 2
+# 3.2 任务基础 2
 
 上一篇，我们学习了任务的基础，学会多种方式场景任务和执行，异步获取返回结果等。上一篇讲述的知识比较多，这一篇只要是代码实践和示例操作。
 
@@ -77,7 +77,7 @@
 
 ### 再说父子任务
 
-在上一篇文章中[《C#多线程(13)：任务基础①》](https://www.cnblogs.com/whuanle/p/12792639.html#父子任务)，我们学习了父子任务，父任务需要等待子任务完成后才算完成任务。
+在上一篇文章中《C#多线程：任务基础①》，我们学习了父子任务，父任务需要等待子任务完成后才算完成任务。
 
 上一章只是给出示例，没有明确说明场景和实验结果，这里重新写一个示例来补充。
 
@@ -179,7 +179,7 @@ public Task ContinueWith(Action<Task> continuationAction);
             task.Start();
 ```
 
-![file](https://www.whuanle.cn/wp-content/uploads/2020/04/image-1588063128308.png)
+![file](images/image-1588063128308.png)
 
 一个任务(Task) 是可以设置多个延续任务的，这些任务是并行的，例如：
 
@@ -218,7 +218,7 @@ public Task ContinueWith(Action<Task> continuationAction);
             }
 ```
 
-![file](https://www.whuanle.cn/wp-content/uploads/2020/04/image-1588063628600.png)
+![file](images/image-1588063628600.png)
 
 通过多次实现延续/组合任务，会实现强有力的任务流程。
 
@@ -333,7 +333,7 @@ ContinueWith(Action>, TaskContinuationOptions
         }
 ```
 
-![file](https://www.whuanle.cn/wp-content/uploads/2020/04/image-1588071312510.png)
+![file](images/image-1588071312510.png)
 
 ### 并行(异步)处理任务
 
@@ -589,14 +589,12 @@ public static bool WaitAll (Task[] tasks, int millisecondsTimeout, CancellationT
 
 
 
-### 定时任务 TaskScheduler 类
+###  TaskScheduler 类
 
-TaskScheduler 类：表示一个处理将任务排队到线程中的低级工作的对象。
+表示一个处理将任务排队到线程中的低级工作的对象。
 
-网上大多数示例是 Wpf 、`WinForm`的，微软文档也是很复杂的样子： [https://docs.microsoft.com/zh-cn/dotnet/api/system.threading.tasks.taskscheduler?view=netcore-3.1#properties](https://docs.microsoft.com/zh-cn/dotnet/api/system.threading.tasks.taskscheduler?view=netcore-3.1#properties)
+在线程池一章中，提到过线程池线程有本地队列、线程偷窥等，我们关注到了线程池数量对提高吞吐量的影响，我们可以使用 TaskScheduler 实现自己的调度逻辑。
 
+TaskScheduler、ThreadPoolTaskScheduler 这些，笔者这里就不讲了，读者可以参考：
 
-
-貌似 TaskScheduler 主要对 `SynchronizationContext` 进行控制，也就是说是对 UI 起作用。
-
-笔者不写 WPF 和 WinForm ，所以，这个东西，跳过。哈哈哈哈。
+https://docs.microsoft.com/zh-cn/dotnet/api/system.threading.tasks.taskscheduler?view=net-6.0
