--- a/3.task/3.task3.md
+++ b/3.task/3.task3.md
@@ -1,4 +1,4 @@
-# 4.3 任务基础 3
+# 3.3 任务基础 3
 
 任务基础一共三篇，本篇是第三篇，之后开始学习异步编程、并发、异步I/O的知识。
 
@@ -423,9 +423,9 @@ Main 方法中：
 
 
 
-### Yield 关键字
+### yield 关键字
 
-迭代器关键字，使得数据不需要一次性返回，可以在需要的时候一条条迭代，这个也相当于异步。
+迭代器关键字，使得数据不需要一次性返回，可以在需要的时候一条条迭代。
 
  迭代器方法运行到 `yield return` 语句时，会返回一个 `expression`，并保留当前在代码中的位置。 下次调用迭代器函数时，将从该位置重新开始执行。
 
@@ -524,13 +524,7 @@ Main 方法中：
 * `Task.Run()` 和 `Task.Factory.StartNew()` 封装了 Task；
 
 * `Task.Run()`是 `Task.Factory.StartNew()` 的简化形式；
-* 有些地方 `net Task()` 是无效的；但是 `Task.Run()` 和 `Task.Factory.StartNew()` 可以；
-
-
-
-本篇是任务基础的终结篇，至此 C# 多线程系列，一共完成了 15 篇，后面会继续深入多线程和任务的更多使用方法和场景。
-
-喜欢我的作者记得关注我哟~
+* 有些地方 `net Task()` 是无效的，因为你还需要 启动任务才行，不能光传递 Task；但是 `Task.Run()` 和 `Task.Factory.StartNew()` 可以；
 
 
 
