--- a/3.task/6.async_await.md
+++ b/3.task/6.async_await.md
@@ -1,10 +1,14 @@
-# 4.6 async 和 await
+# 3.6 async 和 await
 
 ### 导读
 
-扯淡了 17 篇，这篇终于开始学习 async 和 await 了，有了前面的基础，来理解 async 和 await 就容易理解多了。
+扯淡了 这么多 篇，这篇终于开始学习 async 和 await 了，有了前面的基础，来理解 async 和 await 就容易理解多了。
 
 这一篇一定要按照每一个示例，去写代码、执行、输出结果，自己尝试分析思路。
+
+使用 `async/await` 的时候，初学者常常会出现很多使用误区，这里笔者都提及一下。
+
+
 
 ### async
 
@@ -41,15 +45,15 @@ Lambda ：
 
 微软文档：`await` 运算符暂停对其所属的 `async` 方法的求值，直到其操作数表示的异步操作完成。 
 
-异步操作完成后，`await` 运算符将返回操作的结果（如果有）。
+异步操作完成后，`await` 运算符将返回操作的结果（如果有），如果你使用了 await ，那么**这段代码相当于变成同步了**。
 
 
 
-好的，到此为止，async 和 await ，在官方文档中的说明，就这么多。
+好的，到此为止，async 和 await ，就先说这么多。
 
 
 
-## 从以往知识推导
+## 从 Task 到 `async/await`
 
 这里，你会跟笔者从以往文章中学习到的知识，去推导，去理解 async 和 await 这两个关键字是如何使用的，又应该怎么合理使用。
 
@@ -57,11 +61,15 @@ Lambda ：
 
 
 
-### 创建异步任务
+### 使用 Task 完成异步工作
+
+下面这段代码，没有使用 async、await，但是它确确实实是异步的，因为两个线程可以同时运行，**一个线程不必阻塞等待另一个线程完成**。
+
+
 
 场景：周六日放假了，可以打王者(一种游戏)，但是昨天的衣服还没有洗；于是用洗衣机洗衣服，清洗期间，开一局王者(一种游戏)。
 
-我们可以编写一个方法如下：
+我们可以编写一个示例如下：
 
 ```csharp
         static void Main()
@@ -102,11 +110,13 @@ Lambda ：
 
 
 
-### 创建异步任务并返回Task
+
+
+### 带返回值的  Task
 
 上面的示例，虽然说，异步完成了一个任务，但是这样，将代码都放到 Main ，可读性十分差，还要其它什么规范之类的，不允许我们写这样的垃圾代码。于是我们将洗衣服这个任务，封装到一个方法中，然后返回 Task 即可。
 
-在 Program 类中，加入如下一个方法，这个方法用于执行异步任务，并且返回 Task 对象。
+在 Program 类中，加入如下一个方法，这个方法用于执行任务，并且返回 Task 对象。
 
 ```csharp
 
@@ -140,11 +150,9 @@ Main 方法中，改成
             ... ...
 ```
 
-但是，两者差别还是不大。
 
 
-
-### 异步改同步
+### 异步任务中的线程同步
 
 我们创建了异步方法，去执行一个洗衣服的任务；当打完游戏后，需要检查任务是否完成，然后才能进行下一步操作，这时候就出现了 `同步`。为了保持同步和获得执行结果，我们使用了 `.Wait()` 、`.Result` 。
 
@@ -177,6 +185,18 @@ Main 方法中，改成
         }
     }
 ```
+
+
+
+这里，讲解了 Task 的三种使用：
+
+* 使用 Task 完成异步工作
+* 带返回值的  Task
+* 异步任务中的线程同步
+
+
+
+这三个示例对理解后面的 `async/await` 很重要。
 
 
 
@@ -233,13 +253,9 @@ Main 方法中，改成
         }
 ```
 
-说明：await 可以让程序等待任务执行完成，并且获得执行结果。
 
 
-
-看到没有。。。await 关键字，作用是让你等，是同步的，压根不是直接让你的任务变成异步后台执行的。
-
-那为啥提到 async 、await，都是说跟异步有关？不急，后面解释。
+await 可以让当前线程等待任务执行完成，并且获得执行结果。await 关键字，作用是让你等，是同步的，是阻塞的。
 
 
 
@@ -247,7 +263,7 @@ Main 方法中，改成
 
 `async Task<TResult>` 修饰一个方法，那么这个方法要返回 `await Task<TResult>` 的结果。
 
- ![file](./.images/image-1588492862423.png)
+ ![file](./images/image-1588492862423.png)
 
 两种同步方式示例对比：
 
@@ -284,24 +300,11 @@ Main 方法中，改成
 
 
 
-### 同步异步？
-
-问：async 和 await 不是跟异步方法有关嘛，为啥前面的示例使用了 await ，全部变成同步了？
-
-问：使用 async 和 await 的方法，执行过程到底是同步还是异步？
-
-答：同步异步都行，要同步还是异步，全掌握在你的手上。
-
-* 你使用 await 去调用一个异步方法，其执行过程就是同步。
-* 你获取异步方法返回的 Task，就是异步。
-
-<br />
-
-最近笔者收到一些提问，有些读者，使用 async 和 await 去编写业务，想着是异步，可以提升性能，实际结果还是同步，性能一点没有提升。通过下面的示例，你会马上理解应该怎么用。
-
-<br />
 
 
+###  await 阻塞
+
+当你的代码使用 await 时，你的代码会阻塞运行，此时，你的字段代码是同步代码，并不叫异步。
 
 首先，在不使用 async 和 await 关键字的情况下，我们来编写两个方法，分别实现同步和异步的功能，两个方法执行的结果是一致的。
 
@@ -389,7 +392,7 @@ Main 方法中，改成
 
 
 
-### Task封装异步任务
+### Task 封装异步任务
 
 前面，我们都是使用了 `new Task()` 来创建任务，而且微软官网大多使用 `Task.Run()` 来编写 async 和 await 的示例。
 
@@ -409,9 +412,11 @@ Main 方法中，改成
         }
 ```
 
+但是这种代码没啥意义。
 
 
-### 关于跳到 await 变异步
+
+### `async Task` 污染
 
 在百度学习异步的时候，往往会有作者说，进入异步方法后，同步执行代码，碰到 await 后就是异步执行。
 
@@ -423,16 +428,96 @@ Main 方法中，改成
 
 因为使用了 async 和 await 关键字，代码最深处，必定会出现 Task 这个东西，Task 这个东西本来就是异步。碰到 await 出现异步，不是因为 await 的作用，而是因为最底层有个 Task。
 
-![file](./.images/image-1588497534212.png)
+![file](./images/image-1588497534212.png)
 
-![file](./.images/image-1588498203820.png)
+![file](./images/image-1588498203820.png)
 
-### 为什么出现一层层的 await
 
-这是相对于提供服务者来说。因为我要提供接口给你使用，因此底层出现 async、await 后，我会继续保留方法是异步的(async)，然后继续封装，这样就有多层的调用结构，例如上一小节的图。
 
-但是如果来到了调用者这里，就不应该还是使用 async 、await 去编写方法，而是应该按照实际情况同步或异步。
+如果你的一个方法使用了 `async Task`，那么调用了这个方法的其它方法，可能都需要使用 `async Task`，一定程度上会导致 ”代码污染“。
 
-<br />
 
-通过本篇文章，理解 async 和 await 了吧？
+
+## 正确使用 `async/await`
+
+
+
+### 异步执行代码
+
+下面的代码是  `async/await` 代码。
+
+```csharp
+    static async Task Main()
+    {
+        await Run();
+        Console.WriteLine("Main");
+    }
+    public static async Task Run()
+    {
+        // 执行工作
+        Thread.Sleep(1000);
+        Console.WriteLine("Run");
+        await Task.CompletedTask;
+    }
+```
+
+那么其实 Main 的代码是同步代码，不是异步代码。因为 Main 必须完全等待 Run 完成，而期间 Main 方法不能做其它事情，两个线程没有并发，怎么异步？
+
+
+
+如果你改成：
+
+```csharp
+static async Task Main()
+{
+    // 执行任务，这里不使用 await 关键字，让任务异步运行
+    var task = Run();
+    // 执行一下 Main 的代码
+    Console.WriteLine("Main");
+
+    // 使用 await 等待另一个线程完成。
+    await task;
+}
+public static async Task Run()
+{
+    // 执行工作
+    Thread.Sleep(1000);
+    Console.WriteLine("Run");
+    await Task.CompletedTask;
+}
+```
+
+
+
+### 异步 IO
+
+前面提到了 Task、async、await 这些东西，完全没有提到性能相关的说法，因为就算用上了这些东西，也不会提高什么性能。
+
+首先我们区分任务是计算密集型还是 IO 密集型，当涉及到网络、文件这些 IO 操作时，使用系统的异步 API ，可以提高性能。
+
+
+
+这里涉及到计算机组成原理。CPU 很快，而 CPU 跟内存的速度差了几个数量级，因此 CPU 每次执行指令都要从内存中取数据的话，会严重拖慢 CPU，因此出现了多级 CPU 缓存。
+
+计算机中存在着 DMA 芯片，称为协处理器，它可以让内存与设备之间完成 IO 传输，而不需要 CPU 一直参与。
+
+例如， CPU 执行指令从磁盘文件中加载文件到内存中，CPU 可以下方指令，然后 DMA 芯片控制内存跟 IO 设备传输数据，CPU 可以去执行其它任务，等 IO 操作完成，CPU 再回来执行接下来的指令。这一过程即 IO 异步。 
+
+![image-20220731165128240](images/image-20220731165128240.png)
+
+
+
+如果你的代码不会使用到 IO 操作，那么你写的 `async/awaiit`，也只是完成异步代码，不会带来性能上的提升。          
+
+
+
+在 C#  中，执行一个异步 IO 代码的示例如下：
+
+```csharp
+    static async Task Main()
+    {
+        var stream = File.OpenRead("D:/a.txt");
+        string content = await new StreamReader(stream).ReadToEndAsync();
+    }
+```
+
