--- a/2.thread_sync/7.countdownevent.md
+++ b/2.thread_sync/7.countdownevent.md
@@ -1,4 +1,4 @@
-# 2.6 线程完成数
+# 2.7 线程完成数
 
 ### 解决一个问题
 
@@ -51,7 +51,7 @@
     }
 ```
 
-代码太糟糕了，但我们可以使用 CountdownEvent 类来改造它。
+这个代码太糟糕了，我们可以使用 CountdownEvent 类来改造它。
 
 
 
@@ -126,6 +126,7 @@ API 比较多，没事，我们来慢慢了解它。
             // 等他们都完成事情
             countd.Wait();
 
+            Thread.Sleep(500);
             Console.WriteLine("任务完成，线程退出");
             Console.ReadKey();
         }
@@ -142,7 +143,7 @@ API 比较多，没事，我们来慢慢了解它。
     }
 ```
 
-
+![image-20220731150700668](images/image-20220731150700668.png)
 
 示例很简单，每个线程在完成自己的任务时，需要调用 `Signal()` 方法，使得计数器减去1。
 
