--- a/3.task/1.task1.md
+++ b/3.task/1.task1.md
@@ -1,4 +1,4 @@
-# 4.1 任务基础 1 
+# 3.1 任务基础 1
 
 ## 多线程编程
 
@@ -7,8 +7,10 @@
 .NET 中，有三种异步编程模式，分别是基于任务的异步模式(TAP)、基于事件的异步模式(EAP)、异步编程模式(APM)。
 
 - **基于任务的异步模式 (TAP)** ：.NET 推荐使用的异步编程方法，该模式使用单一方法表示异步操作的开始和完成。包括我们常用的 async 、await 关键字，属于该模式的支持。
-- 基于事件的异步模式 (EAP) ：是提供异步行为的基于事件的旧模型。[《C#多线程(12)：线程池》](https://www.cnblogs.com/whuanle/p/12787505.html#不支持的线程池异步委托)中提到过此模式，.NET Core 已经不支持。
-- 异步编程模型 (APM) 模式：也称为 [IAsyncResult](https://docs.microsoft.com/zh-cn/dotnet/api/system.iasyncresult) 模式，，这是使用 IAsyncResult 接口提供异步行为的旧模型。.NET Core 也不支持，请参考 [《C#多线程(12)：线程池》](https://www.cnblogs.com/whuanle/p/12787505.html#不支持的线程池异步委托)。 
+- 基于事件的异步模式 (EAP) ：是提供异步行为的基于事件的旧模型。在线程池一章中提到过此模式，.NET Core 已经不支持。
+- 异步编程模型 (APM) 模式：也称为 [IAsyncResult](https://docs.microsoft.com/zh-cn/dotnet/api/system.iasyncresult) 模式，，这是使用 IAsyncResult 接口提供异步行为的旧模型。.NET Core 也不支持。
+
+
 
 前面，我们学习了三部分的内容：
 
@@ -293,10 +295,10 @@ public Task StartNew(Action action, CancellationToken cancellationToken);
 
 <p>
     <div style="color: rgb(23, 23, 23); font-family: &quot;Segoe UI&quot;, SegoeUI, &quot;Segoe WP&quot;, &quot;Helvetica Neue&quot;, Helvetica, Tahoma, Arial, sans-serif; background-color: rgb(255, 241, 204);border-radius: 10px;padding:20px;">
-笔者在这里犯了一个错误，在写下一篇文章时重新测试发现的。文档的中文翻译实在太可怕了。。。<br />
- 子任务使用了 TaskCreationOptions.AttachedToParent ，并不是指父任务要等待子任务完成后，父任务才能继续完往下执行；而是指父任务如果先执行完毕，那么必须等待子任务完成后，父任务才算完成。
+注意，子任务使用了 TaskCreationOptions.AttachedToParent ，并不是指父任务要等待子任务完成后，父任务才能继续完往下执行；而是指父任务如果先执行完毕，那么必须等待子任务完成后，父任务才算完成。
         </div>
 </p>
+
 
 
 
@@ -527,8 +529,6 @@ public delegate void EventHandler<TEventArgs>(object? sender, TEventArgs e);
     }
 ```
 
-TaskScheduler.UnobservedTaskException 到底怎么用，笔者不太清楚。而且效果难以观察。
-
-请参考：
+`TaskScheduler.UnobservedTaskException` 到底怎么用，笔者不太清楚，效果难以观察，读者可自行参考：
 
 [https://stackoverflow.com/search?q=TaskScheduler.UnobservedTaskException](https://stackoverflow.com/search?q=TaskScheduler.UnobservedTaskException)
