修改图片错误

--- a/1.thread_basic/1.thread.md
+++ b/1.thread_basic/1.thread.md
@@ -282,7 +282,7 @@ public delegate void ThreadStart();
 
 .NET Thread 的 `Thread.ThreadState` 表示的线程生命周期变更关系如下：
 
-![file](./.images/image-1587202311528.png)
+![file](./images/image-1587202311528.png)
 
 
 
