修复部分链接错误

--- a/2.thread_sync/2.locker_monitor.md
+++ b/2.thread_sync/2.locker_monitor.md
@@ -80,7 +80,7 @@ finally
 
 下面编写一个简单的锁，示例如下：
 
-```C#
+```csharrp
     class Program
     {
         private static object obj = new object();
@@ -172,7 +172,7 @@ finally
 
 下面是一个很简单的示例：
 
-```C#
+```csharrp
         private static object obj = new object();
         private static bool acquiredLock = false;
 		
@@ -215,7 +215,7 @@ Monitor 对象的 Enter 和 Exit 方法来标记临界区的开头和结尾。
 
 下面示范了多个线程如何使用 Monitor 来实现锁：
 
-```C#
+```csharrp
        private static object obj = new object();
         private static bool acquiredLock = false;
         static void Main(string[] args)
@@ -283,7 +283,7 @@ Monitor 对象的 Enter 和 Exit 方法来标记临界区的开头和结尾。
 
 改造上面的示例如下：
 
-```C#
+```csharrp
         private static object obj = new object();
         private static bool acquiredLock = false;
         static void Main(string[] args)
