--- a/2.thread_sync/3.mutex.md
+++ b/2.thread_sync/3.mutex.md
@@ -67,7 +67,7 @@ Mutex 的常用方法如下：
 
 下面是一个示例，用于控制系统只能运行一个此程序的实例，不允许同时启动多次。
 
-```c#
+```csharrp
     class Program
     {
         // 第一个程序
@@ -170,7 +170,7 @@ https://www.cnblogs.com/suntp/p/8258488.html
 
 使用 `WaitOne()` 方法来等待别的进程释放互斥量，即模拟排队；`ReleaseMutex()` 方法解除对坑位的占用。
 
-```C#
+```csharrp
     class Program
     {
         // 第一个程序
