修复部分链接错误

--- a/2.thread_sync/8.Barrier.md
+++ b/2.thread_sync/8.Barrier.md
@@ -31,7 +31,7 @@ Barrier 的构造函数如下：
 | Barrier(Int32)         | 初始化 Barrier 类的新实例。 |
 | Barrier(Int32, Action) | 初始化 Barrier 类的新实例。 |
 其中一个构造函数定义如下：
-```csharrp
+```csharp
 public Barrier (int participantCount, Action<Barrier> postPhaseAction);
 ```
 
