修复部分问题

--- a/1.thread_basic/1.thread.md
+++ b/1.thread_basic/1.thread.md
@@ -286,7 +286,7 @@ public delegate void ThreadStart();
 
 
 
-另外，需要注意的是，线程的 `ThreadState` 属性，并不能表面线程实时状态。
+另外，需要注意的是，线程的 `ThreadState` 属性，并不能表明线程的实时状态。
 
 因为线程执行时，可能会被 CPU 夺取时间片，这个时间是极短的，可能就几个指令时间，因此当你大代码完成判断时，线程已经被挂起。
 
