--- a/3.task/4.value_task.md
+++ b/3.task/4.value_task.md
@@ -302,7 +302,7 @@ ValueTask 只是包装 Task 的返回结果。
 
 
 
-后来，为了更高的性能，引入了 IValueTaskCource，ValueTask 便多增加了一个构造函数。
+后来，为了更高的性能，引入了 IValueTaskSource，ValueTask 便多增加了一个构造函数。
 
 可以通过实现 IValueTaskSource：
 
