--- a/3.task/9.task_scheduler.md
+++ b/3.task/9.task_scheduler.md
@@ -1,3 +1,7 @@
+# 3.9 自定义任务调度
+
+
+```csharp
 using System;
 using System.Collections.Generic;
 using System.Threading;
@@ -213,3 +217,4 @@ public class LimitedConcurrencyLevelTaskScheduler : TaskScheduler
 //    't' in task t1-4 on thread 3   'u' in task t1-4 on thread 3   'v' in task t1-4 on thread 3
 //    'w' in task t1-4 on thread 3   'x' in task t1-4 on thread 3   'y' in task t1-4 on thread 3
 //    'z' in task t1-4 on thread 3   '{' in task t1-4 on thread 3   '|' in task t1-4 on thread 3
+```
